fix(css): spacing

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -215,6 +215,7 @@
   }
   .blog .title {
     font-size: 20px;
+    line-height: 25.3px;
   }
   .blog .recent-posts {
     margin-top: 25px;
